# fastapi-example-base-app

./: .gitignore  docker-compose.yml  pyproject.toml
example-base-app/: main.py
example-base-app/api/: __init__.py
example-base-app/core/: config.py
example-base-app/core/models/: __init__.py  base.py  usermodel.py
