[project]
name = "fastapi-example-base-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.120.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "sqlalchemy[asyncio]>=2.0.44",
]
